Final edits to main pages.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
   <body>
     <div class="container">
-    <!--DON DON's FROZEN DELIGHTS LOGO-->
+      <!--DON DON's FROZEN DELIGHTS LOGO-->
       <section id="keygroup">
-      <!--This is where LOGO AND NAV ARE LOCATED-->
+        <!--This is where LOGO AND NAV ARE LOCATED-->
         <nav class="grid">
           <div class="col-3 logo">
             <a href="index.html">
@@ -69,16 +69,17 @@
       <div class="grid"> <!-- Starting a different grid -->
         <div class="col-9">
           <article id="mainEvent">
-
+            <a href="product_bukosalad.html">
               <picture>
                 <source class="mainEvent" media="(min-width: 40em)" srcset="img/buko-salad_big.jpg 1x">
                 <source 
-                srcset="img/buko-salad_small.jpg 1x"> 
+                  srcset="img/buko-salad_small.jpg 1x"> 
 
                 <img class="mainEvent"
-                src="img/buko-salad_big.jpg" 
-                alt="Buko Salad Special banner">     
-              </picture>
+                  src="img/buko-salad_big.jpg" 
+                  alt="Buko Salad Special banner">     
+               </picture>
+            </a>
 
               <h2 class="title">Best Selling Ice Cream</h2>
 
@@ -87,22 +88,22 @@
               <p><a href="">Read more</a></p>
 
 
-          </article>
-        </div>
+            </article>
+          </div>
 
-        <!--PAST UPDATE!-->
+          <!--PAST UPDATE!-->
     <!--
         This is the second column
       -->   
       <div class="col-3">
         <article id="sideEvent">
 
-        <h3 class="sideTitle">New BETA FOOD, Inc. Contact Numbers </h3>
-        <h6 class="date">( Feb. 21 , 2015 )</h6>
+          <h3 class="sideTitle">New BETA FOOD, Inc. Contact Numbers </h3>
+          <h6 class="date">( Feb. 21 , 2015 )</h6>
 
-        <p class="sideNote">We have added new contact information for those living in Greater Manila Area to ask for customer service.</p>
-        
-        <p class="sideNote"><a href="contact.html">Read more</a></p>
+          <p class="sideNote">We have added new contact information for those living in Greater Manila Area to ask for customer service.</p>
+
+          <p class="sideNote"><a href="contact.html">Read more</a></p>
 <!-- 
         <p class="sideNote">New contact information:</p>
 
@@ -110,30 +111,30 @@
               <li class="sideNote">372 9104</li>
               <li class="sideNote">373 4192</li>
               <li class="sideNote">294 6724</li>
-        </ul> -->
+            </ul> -->
 
-        <h3 class="sideTitle">Don Don's Frozen Delight's Website</h3>
-        <h6 class="date">( Jan. 2 , 2015 )</h6>
+            <h3 class="sideTitle">Don Don's Frozen Delight's Website</h3>
+            <h6 class="date">( Jan. 2 , 2015 )</h6>
 
-        <p class="sideNote">We finally have a website! We hope to bring the best of our ice cream and to better serve our customers online.</p>
-        
-        <p class="sideNote"><a href="#">Read more</a></p>
+            <p class="sideNote">We finally have a website! We hope to bring the best of our ice cream and to better serve our customers online.</p>
 
-
-      </article>
+            <p class="sideNote"><a href="#">Read more</a></p>
 
 
+          </article>
 
+
+
+
+        </div>
+      </div>
+
+      <section id="footer">
+        <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
+      </section>
 
     </div>
-  </div>
-
-  <section id="footer">
-    <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
-  </section>
-
-  </div>
-</body>
+  </body>
 
 
-</html>
+  </html>
