--- a/order_confirmation.html
+++ b/order_confirmation.html
@@ -38,30 +38,31 @@
 
 
     <section id="keygroup">
-      <!--This is where LOGO AND NAV ARE LOCATED-->
+    <!--This is where LOGO AND NAV ARE LOCATED-->
       <nav class="grid">
-       <div class="col-3">
-        <img class="logo" alt="Don Don's Frozen Delights" src="img/Logo.png">
-      </div>
-      <div class="col-1">
-        &nbsp;
-      </div>
-      <div class="col-2 navitem">
-        <a class="navigation" href="index.html">Home</a>
-      </div>
-      <div class="col-2 navitem">
-        <a class="navigation" href="products.html">Products</a>
-      </div>
-      <div class="col-2 navitem special">
-        <a class="navigation orderHere" href="order.html">Order</a>
-      </div>
-      <div class="col-2 navitem">
-        <a class="navigation" href="contact.html">Contact</a>
-      </div>
-
-    </nav>
-
-  </section>    
+        <div class="col-3 logo">
+          <a href="index.html">
+            <img class="logo" alt="Don Don's Frozen Delights" src="img/Logo.png">
+          </a>
+        </div>
+        <div class="col-1">
+          &nbsp;
+        </div>
+        <div class="col-2 navitem">
+          <a class="navigation" href="index.html">Home</a>
+        </div>
+        <div class="col-2 navitem">
+          <a class="navigation" href="products.html">Products</a>
+        </div>
+        <div class="col-2 navitem">
+          <a class="navigation" href="contact.html">Contact</a>
+        </div>
+        <div class="col-2 navitem">
+          <a class="navigation selected" href="order.html">Order</a>
+        </div>
+      </nav>
+      
+    </section>   
 
 
   <!--MOST RECENT UPDATE!-->
@@ -77,17 +78,9 @@
             <p>Thanks for purchasing! You will be sent a message shortly with your order arrival and tracking.</p>
             <h3 class="address">Other Recommended Items...</h3>
           </div>
-
-
-
-
         </div>
 
-
-        
-
         <div class="grid productvariety">
-
           <div class="col-2 thumbnail">
             <figure>
               <img alt="Product Image" src="img/cheese.jpg">
@@ -114,8 +107,6 @@
 
         </div>
 
-
-
       </div> 
 
     </div> 
@@ -124,6 +115,9 @@
 
 </div> <!--ALL-->
 
+<section id="footer">
+  <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
+</section>
 
 </body>
 </html>
