--- a/product_drumstick.html
+++ b/product_drumstick.html
@@ -17,7 +17,7 @@
     -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Don Don's Frozen Delights - Vanilla</title>
+    <title>Don Don's Frozen Delights - Buko Salad</title>
 
     <link href="css/normalize.css" rel="stylesheet" >
 
@@ -66,13 +66,15 @@
 
     <div class="col-3 productimage">
       <figure>
-        <img  alt="Product Image" src="img/vanilla-stick.jpg">
+        <img  alt="Product Image" src="img/icecream-stick.jpg">
       </figure>
     </div>
 
     <div class="col-9">
-     <h3>Vanilla</h3>
-     <p>The fantasticly simple, yet oh so tasty vanilla is a staple of any good ice cream shop. Not sure what to get? Just choose vanilla and enjoy this simple yet nice taste.</p>
+     <h3>Buko Salad</h3>
+     <p>This is the awesomely Filipino buko (or coconut) salad bar that shocked the world. Just looking will make you crave some fresh coconut juice and milk. The infusion of flavour is a uniquely Filipino taste.</p>
+
+     <p>Only available in bar and premium cups, but more varieties coming soon!</p>
    </div>
 
  </div>
@@ -83,39 +85,9 @@
     </div>
     <div class="col-2 thumbnail">
       <figure>
-        <img width="300" height="300" alt="Product Image" src="img/drumstick.jpg">
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>Drumstick</figcaption>
-        </div></a>
-      </figure>
-      <a class="button" href="order.html">Order</a>
-    </div>
-
-    <div class="col-2 thumbnail">
-      <figure>
-        <img width="300" height="300" alt="Product Image" src="img/pint.jpg">
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>Cone</figcaption>
-        </div></a>
-      </figure>
-      <a class="button" href="order.html">Order</a>
-    </div>
-
-    <div class="col-2 thumbnail">
-      <figure>
-        <img width="300" height="300" alt="Product Image" src="img/half-gallon.jpg">
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>Half-Gallon</figcaption>
-        </div></a>
-      </figure>
-      <a class="button" href="order.html">Order</a>
-    </div>
-
-    <div class="col-2 thumbnail">
-      <figure>
-        <img width="300" height="300" alt="Product Image" src="img/1litre.jpg">
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>One Litre</figcaption>
+        <img width="300" height="300" alt="Product Image" src="img/buko-salad.jpg">
+        <a href="#"><div class="overlay">
+          <figcaption>Special Bar</figcaption>
         </div></a>
       </figure>
       <a class="button" href="order.html">Order</a>
@@ -125,18 +97,8 @@
       <figure>
         <img width="300" height="300" alt="Product Image" src="img/premium-cup.jpg">
 
-        <a href="product_icecreamstick.html"><div class="overlay">
+        <a href="#"><div class="overlay">
           <figcaption>Premium Cup</figcaption>
-        </div></a>
-      </figure>
-      <a class="button" href="order.html">Order</a>
-    </div>
-
-    <div class="col-2 thumbnail">
-      <figure>
-        <img width="300" height="300" alt="Product Image" src="img/icecream-stick.jpg">
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>Ice Cream Stick</figcaption>
         </div></a>
       </figure>
       <a class="button" href="order.html">Order</a>
