--- a/product_icecreamstick.html
+++ b/product_icecreamstick.html
@@ -17,7 +17,7 @@
     -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Don Don's Frozen Delights - Vanilla</title>
+    <title>Don Don's Frozen Delights - Buko Salad</title>
 
     <link href="css/normalize.css" rel="stylesheet" >
 
@@ -66,13 +66,15 @@
 
     <div class="col-3 productimage">
       <figure>
-        <img  alt="Product Image" src="img/vanilla-stick.jpg">
+        <img  alt="Product Image" src="img/icecream-stick.jpg">
       </figure>
     </div>
 
     <div class="col-9">
-     <h3>Vanilla</h3>
-     <p>The fantasticly simple, yet oh so tasty vanilla is a staple of any good ice cream shop. Not sure what to get? Just choose vanilla and enjoy this simple yet nice taste.</p>
+     <h3>Ice Cream Stick</h3>
+     <p>A nice and simple ice cream on a stick. Properly frozen and ready for munching. You can get it in packs of 6 or singles.</p>
+
+     <p>Get it in a variety of flavours and tastes!</p>
    </div>
 
  </div>
@@ -83,64 +85,40 @@
     </div>
     <div class="col-2 thumbnail">
       <figure>
-        <img width="300" height="300" alt="Product Image" src="img/drumstick.jpg">
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>Drumstick</figcaption>
+        <img width="300" height="300" alt="Product Image" src="img/cheese.jpg">
+        <a href="product_vanilla.html"><div class="overlay">
+          <figcaption>Cheese</figcaption>
         </div></a>
       </figure>
-      <a class="button" href="order.html">Order</a>
+    </div>
+    
+    <div class="col-2 thumbnail">
+      <figure>
+        <img width="300" height="300" alt="Product Image" src="img/vanilla-stick.jpg">
+        <a href="product_vanilla.html"><div class="overlay">
+          <figcaption>Vanilla</figcaption>
+        </div></a>
+      </figure>
     </div>
 
     <div class="col-2 thumbnail">
       <figure>
-        <img width="300" height="300" alt="Product Image" src="img/pint.jpg">
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>Cone</figcaption>
+        <img width="300" height="300" alt="Product Image" src="img/melon.jpg">
+        <a href="product_vanilla.html"><div class="overlay">
+          <figcaption>Melon</figcaption>
         </div></a>
       </figure>
-      <a class="button" href="order.html">Order</a>
     </div>
 
     <div class="col-2 thumbnail">
       <figure>
-        <img width="300" height="300" alt="Product Image" src="img/half-gallon.jpg">
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>Half-Gallon</figcaption>
+        <img width="300" height="300" alt="Product Image" src="img/pandan-stick.jpg">
+        <a href="product_vanilla.html"><div class="overlay">
+          <figcaption>Pandan</figcaption>
         </div></a>
       </figure>
-      <a class="button" href="order.html">Order</a>
     </div>
 
-    <div class="col-2 thumbnail">
-      <figure>
-        <img width="300" height="300" alt="Product Image" src="img/1litre.jpg">
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>One Litre</figcaption>
-        </div></a>
-      </figure>
-      <a class="button" href="order.html">Order</a>
-    </div>
-
-    <div class="col-2 thumbnail">
-      <figure>
-        <img width="300" height="300" alt="Product Image" src="img/premium-cup.jpg">
-
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>Premium Cup</figcaption>
-        </div></a>
-      </figure>
-      <a class="button" href="order.html">Order</a>
-    </div>
-
-    <div class="col-2 thumbnail">
-      <figure>
-        <img width="300" height="300" alt="Product Image" src="img/icecream-stick.jpg">
-        <a href="product_icecreamstick.html"><div class="overlay">
-          <figcaption>Ice Cream Stick</figcaption>
-        </div></a>
-      </figure>
-      <a class="button" href="order.html">Order</a>
-    </div>
   </div>
   <section id="footer">
     <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
