--- a/Template.html
+++ b/Template.html
@@ -52,8 +52,8 @@
         <h3>Sample code:</h3>
         <code>&lt;a href="#" class="button"&gt;DEFAULT BUTTON&lt;/a&gt;</code>
         <h3>Rendered element:</h3>
-        <a class="button" href="#">DEFAULT BUTTON</a>
-        <a class="button" href="#">DEFAULT BUTTON</a>
+        <a class="button" href="#">Button</a>
+        <a class="button" href="#">Click here!</a>
       </section>
 
       <!-- FORM element-->
@@ -68,45 +68,99 @@
 
         <h3>Sample code:</h3>
 
-        <code>&lt;div class="input-wrapper"&gt;&lt;div class="grid"&gt;&lt;div class="col-12"&gt;&lt;form method="post" class="form" action="#"&gt;&lt;div class="grid"&gt;&lt;div class="col-6"&gt;&lt;label class="form" for="form-name"&gt;First Name:&lt;/label &gt;&lt;input class="form" type="text" id="form-name" placeholder="John"&gt;&lt;/div&gt;&lt;div class="col-6"&gt;&lt;label class="form" for="form-name"&gt;&lt;Last Name:&gt;&lt;/label&gt;&lt;input class="form" type="text" id="form-name" placeholder="Doe"&gt;&lt;/div&gt;&lt;div class="input-wrapper"&gt;&lt;textarea class="form" id="form-comment" placeholder="Please place your comment here"&gt;&lt;/textarea&gt;&lt;/div&gt;&lt;input class="form-submit" type="submit" value="Submit"&gt;
-          &lt;/form&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;
+        <!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;margin:1em 0;"><pre style="margin: 0; line-height: 125%">  <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;grid&quot;</span><span style="color: #007700">&gt;</span>
+    <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;col-12&quot;</span><span style="color: #007700">&gt;</span>
+      <span style="color: #007700">&lt;h2</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;title&quot;</span><span style="color: #007700">&gt;</span>Contact Form<span style="color: #007700">&lt;/h2&gt;</span>
+
+      <span style="color: #007700">&lt;form</span> <span style="color: #0000CC">method=</span><span style="background-color: #fff0f0">&quot;post&quot;</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form&quot;</span> <span style="color: #0000CC">action=</span><span style="background-color: #fff0f0">&quot;#&quot;</span><span style="color: #007700">&gt;</span>
+
+        <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;grid&quot;</span><span style="color: #007700">&gt;</span>
+          <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;col-3&quot;</span><span style="color: #007700">&gt;</span>
+            <span style="color: #007700">&lt;label</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form&quot;</span> <span style="color: #0000CC">for=</span><span style="background-color: #fff0f0">&quot;form-name&quot;</span><span style="color: #007700">&gt;</span>First Name:<span style="color: #007700">&lt;/label&gt;</span>
+            <span style="color: #007700">&lt;input</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form&quot;</span> <span style="color: #0000CC">type=</span><span style="background-color: #fff0f0">&quot;text&quot;</span> <span style="color: #0000CC">id=</span><span style="background-color: #fff0f0">&quot;form-name&quot;</span> <span style="color: #0000CC">placeholder=</span><span style="background-color: #fff0f0">&quot;John&quot;</span><span style="color: #007700">&gt;</span>
+          <span style="color: #007700">&lt;/div&gt;</span>
+          <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;col-3&quot;</span><span style="color: #007700">&gt;</span>
+            <span style="color: #007700">&lt;label</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form&quot;</span> <span style="color: #0000CC">for=</span><span style="background-color: #fff0f0">&quot;form-name&quot;</span><span style="color: #007700">&gt;</span>Last Name:<span style="color: #007700">&lt;/label&gt;</span>
+            <span style="color: #007700">&lt;input</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form&quot;</span> <span style="color: #0000CC">type=</span><span style="background-color: #fff0f0">&quot;text&quot;</span> <span style="color: #0000CC">id=</span><span style="background-color: #fff0f0">&quot;form-name&quot;</span> <span style="color: #0000CC">placeholder=</span><span style="background-color: #fff0f0">&quot;Doe&quot;</span><span style="color: #007700">&gt;</span>
+          <span style="color: #007700">&lt;/div&gt;</span>
+        <span style="color: #007700">&lt;/div&gt;</span>
+        
+        <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;grid&quot;</span><span style="color: #007700">&gt;</span>              
+          <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;col-4 contactInfo&quot;</span><span style="color: #007700">&gt;</span>
+            <span style="color: #007700">&lt;label</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form&quot;</span> <span style="color: #0000CC">for=</span><span style="background-color: #fff0f0">&quot;form-name&quot;</span><span style="color: #007700">&gt;</span>Email<span style="color: #007700">&lt;/label&gt;</span>
+            <span style="color: #007700">&lt;input</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form&quot;</span> <span style="color: #0000CC">type=</span><span style="background-color: #fff0f0">&quot;text&quot;</span> <span style="color: #0000CC">id=</span><span style="background-color: #fff0f0">&quot;form-name&quot;</span> <span style="color: #0000CC">placeholder=</span><span style="background-color: #fff0f0">&quot;johnny@something.com&quot;</span><span style="color: #007700">&gt;</span>
+          <span style="color: #007700">&lt;/div&gt;</span>
+        <span style="color: #007700">&lt;/div&gt;</span>
+        
+        <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;grid&quot;</span><span style="color: #007700">&gt;</span> 
+          <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;col-4 contactInfo&quot;</span><span style="color: #007700">&gt;</span>
+            <span style="color: #007700">&lt;label</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form&quot;</span> <span style="color: #0000CC">for=</span><span style="background-color: #fff0f0">&quot;form-name&quot;</span><span style="color: #007700">&gt;</span>Subject<span style="color: #007700">&lt;/label&gt;</span>
+            <span style="color: #007700">&lt;input</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form&quot;</span> <span style="color: #0000CC">type=</span><span style="background-color: #fff0f0">&quot;text&quot;</span> <span style="color: #0000CC">id=</span><span style="background-color: #fff0f0">&quot;form-name&quot;</span> <span style="color: #0000CC">placeholder=</span><span style="background-color: #fff0f0">&quot;Topic&quot;</span><span style="color: #007700">&gt;</span>
+          <span style="color: #007700">&lt;/div&gt;</span>
+
+        <span style="color: #007700">&lt;/div&gt;</span>
+
+        <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;grid&quot;</span><span style="color: #007700">&gt;</span>
+          <span style="color: #007700">&lt;div</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;col-8&quot;</span><span style="color: #007700">&gt;</span>
+            <span style="color: #007700">&lt;textarea</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form&quot;</span> <span style="color: #0000CC">id=</span><span style="background-color: #fff0f0">&quot;form-comment&quot;</span> <span style="color: #0000CC">placeholder=</span><span style="background-color: #fff0f0">&quot;Please place your comment here&quot;</span><span style="color: #007700">&gt;&lt;/textarea&gt;</span>
+          <span style="color: #007700">&lt;/div&gt;</span>
+        <span style="color: #007700">&lt;/div&gt;</span>
 
 
 
-          &lt;div class="input-wrapper"&gt;&lt;label class="form" for="form-name"&gt;Default Form:&lt;/label&gt;&lt;input class="form" type="text" id="form-name" placeholder="Default Form"&gt;&lt;/div&gt;
+        <span style="color: #007700">&lt;input</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;form-submit&quot;</span> <span style="color: #0000CC">type=</span><span style="background-color: #fff0f0">&quot;submit&quot;</span> <span style="color: #0000CC">value=</span><span style="background-color: #fff0f0">&quot;Submit&quot;</span><span style="color: #007700">&gt;</span>
+      <span style="color: #007700">&lt;/div&gt;</span>
 
-          &lt;div class="input-wrapper"&gt;&lt;textarea class="form" id="form-comment" placeholder="Default Form"&gt;Default Form&lt;/textarea&gt;&lt;/div&gt;&lt;input class="form-submit" type="submit" value="DEFAULT FORM"&gt;
-        </code>
+    <span style="color: #007700">&lt;/form&gt;</span>
+  <span style="color: #007700">&lt;/div&gt;</span>
+</pre></div>
+
 
         <h3>Rendered element:</h3>
 
-
-        <div class="input-wrapper">
-          <div class="grid"> <!-- Starting a different grid -->
-           <div class="col-12">
-
-             <form method="post" class="form" action="#">
+        <div class="grid">
+          <div class="col-12">
+            <form method="post" class="form" action="#">
 
               <div class="grid">
-                <div class="col-6">
+                <div class="col-3">
                   <label class="form" for="form-name">First Name:</label>
                   <input class="form" type="text" id="form-name" placeholder="John">
                 </div>
-                <div class="col-6">
+                <div class="col-3">
                   <label class="form" for="form-name">Last Name:</label>
                   <input class="form" type="text" id="form-name" placeholder="Doe">
                 </div>
               </div>
 
-              <div class="input-wrapper">
-               <textarea class="form" id="form-comment" placeholder="Please place your comment here"></textarea>
-             </div>
+              <div class="grid">              
+                <div class="col-4 contactInfo">
+                  <label class="form" for="form-name">Email</label>
+                  <input class="form" type="text" id="form-name" placeholder="johnny@something.com">
+                </div>
+              </div>
 
-             <input class="form-submit" type="submit" value="Submit">
-           </form>
-         </div>
-       </div>
-     </div>
+              <div class="grid"> 
+                <div class="col-4 contactInfo">
+                  <label class="form" for="form-name">Subject</label>
+                  <input class="form" type="text" id="form-name" placeholder="Topic">
+                </div>
+
+              </div>
+
+              <div class="grid">
+                <div class="col-8">
+                  <textarea class="form" id="form-comment" placeholder="Please place your comment here"></textarea>
+                </div>
+              </div>
+
+
+
+              <input class="form-submit" type="submit" value="Submit">
+            </div>
+
+          </form>
+        </div>
 
 
    </section>
@@ -123,11 +177,21 @@
     <p>'p.textual'</p>
     <p>'a.important'</p>
     <h3>Sample code:</h3>
-    <code>&lt;h2 class="title"&gt;Default Textual&lt;/h2&gt;
-      &lt;h3 class="address"&gt;Default Textual&lt;/h3&gt;
-      &lt;h4 class="addressLocation"&gt;Default Textual&lt;/h4&gt;
-      &lt;h6 class="date"&gt;Default Textual&lt;/h6&gt;
-      &lt;p class="textual"&gt;Default Textual, Etiam sit amet sem vehicula, efficitur eros faucibus, dignissim odio. &lt;a class="important" href="#"&gt;Duis diam sem, malesuada&lt;/a&gt; non augue quis, viverra lacinia turpis. Morbi in vehicula eros, quis vestibulum libero.&lt;/p&gt;</code>
+<!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em; margin: 1em 0;"><pre style="margin: 0; line-height: 125%">  <span style="color: #007700">&lt;h3&gt;</span>Rendered element:<span style="color: #007700">&lt;/h3&gt;</span>
+
+  <span style="color: #007700">&lt;h2</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;title&quot;</span><span style="color: #007700">&gt;</span>Header 2 Title<span style="color: #007700">&lt;/h2&gt;</span>
+
+  <span style="color: #007700">&lt;h3&gt;</span>Header 3<span style="color: #007700">&lt;/h3&gt;</span>
+
+  <span style="color: #007700">&lt;h4&gt;</span>Header 4<span style="color: #007700">&lt;/h4&gt;</span>
+
+  <span style="color: #007700">&lt;h6&gt;</span>Header 6<span style="color: #007700">&lt;/h6&gt;</span>
+
+  <span style="color: #007700">&lt;p</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;textual&quot;</span><span style="color: #007700">&gt;</span>Etiam sit amet sem vehicula, efficitur eros faucibus, dignissim odio. <span style="color: #007700">&lt;a</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;important&quot;</span> <span style="color: #0000CC">href=</span><span style="background-color: #fff0f0">&quot;#&quot;</span><span style="color: #007700">&gt;</span>Duis diam sem, malesuada<span style="color: #007700">&lt;/a&gt;</span> non augue quis, viverra lacinia turpis. Morbi in vehicula eros, quis vestibulum libero.<span style="color: #007700">&lt;/p&gt;</span>
+
+  <span style="color: #007700">&lt;p</span> <span style="color: #0000CC">class=</span><span style="background-color: #fff0f0">&quot;textual&quot;</span><span style="color: #007700">&gt;</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel orci tristique nisi feugiat mollis non id nisl. Etiam pretium turpis a semper mollis. Nulla sit amet elementum sem, mollis finibus risus. Ut volutpat nibh scelerisque nulla auctor, vel pellentesque eros ornare. Vivamus feugiat est a enim sodales, lobortis suscipit tellus dapibus. Quisque nulla purus, auctor et laoreet ac, molestie at turpis. Pellentesque sollicitudin metus at tortor tempor, congue venenatis tortor vestibulum. In erat sem, interdum et volutpat id, vehicula eget magna. Suspendisse sed sodales arcu. Praesent vestibulum cursus interdum. Mauris feugiat, urna in venenatis blandit, lectus metus fermentum turpis, ac convallis nibh est auctor augue. Pellentesque et sagittis leo, in faucibus diam. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<span style="color: #007700">&lt;/p&gt;</span>
+</pre></div>
+
 
       <h3>Rendered element:</h3>
 
