Capitalize sources, cause that's important

--- a/order.html
+++ b/order.html
@@ -192,7 +192,7 @@
                     <div class="col-12 payment">
                       <input type="radio" name="pay" value="payMethod" checked>
                       <figure>
-                        <img width="100%" alt="Payment1" src="img/paypal.png">
+                        <img width="100%" alt="Payment1" src="img/Paypal.png">
                         <figcaption></figcaption>
                       </figure>
                     </div>
